[gd_scene load_steps=15 format=3 uid="uid://ctc4gpjpk1de3"]

[ext_resource type="Theme" uid="uid://b8v02hn8g813h" path="res://assets/sisyphus_theme.tres" id="1_ktc57"]
[ext_resource type="Script" uid="uid://02c1xmwyeepc" path="res://scripts/tartarus.gd" id="1_ss6v2"]
[ext_resource type="PackedScene" uid="uid://cp815mpgfya5x" path="res://scenes/upgrade_shop.tscn" id="3_ljron"]
[ext_resource type="PackedScene" uid="uid://diwk0tlamcmlv" path="res://scenes/day_end.tscn" id="4_70rlu"]
[ext_resource type="Texture2D" uid="uid://3u7ids6siyvs" path="res://assets/greek_wave_1924.png" id="5_ihtwa"]
[ext_resource type="Texture2D" uid="uid://b6n1157thj4hg" path="res://assets/sisyphus_cutout.png" id="5_ustnh"]
[ext_resource type="AudioStream" uid="uid://davcrj4j8mvlv" path="res://assets/music/anorlondo1.4.wav" id="8_8ubw0"]

[sub_resource type="Animation" id="Animation_8ubw0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1ged7"]
resource_name = "roll"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.43, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0925025, 0.0]
}

[sub_resource type="Animation" id="Animation_ihtwa"]
resource_name = "struggle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0343251, 0.0666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0174533, 0.010472, -0.0174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2o57"]
_data = {
&"RESET": SubResource("Animation_8ubw0"),
&"roll": SubResource("Animation_1ged7"),
&"struggle": SubResource("Animation_ihtwa")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ubw0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2o57"]
bg_color = Color(0.6, 0.819608, 0.482353, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1ged7"]

[node name="Tartarus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_ktc57")
script = ExtResource("1_ss6v2")
upgrade_shop_scene = ExtResource("3_ljron")
day_end_scene = ExtResource("4_70rlu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.878431, 0.431373, 0.0156863, 1)

[node name="Parallax2D" type="Parallax2D" parent="."]
unique_name_in_owner = true
repeat_size = Vector2(1924, 0)

[node name="GreekWave2" type="Sprite2D" parent="Parallax2D"]
position = Vector2(647, 30)
texture = ExtResource("5_ihtwa")

[node name="Parallax2D2" type="Parallax2D" parent="."]
unique_name_in_owner = true
rotation = -0.464258
scroll_offset = Vector2(1820, 991)
repeat_size = Vector2(1924, 0)
repeat_times = 10

[node name="GreekWave" type="Sprite2D" parent="Parallax2D2"]
texture = ExtResource("5_ihtwa")

[node name="SisyphusStockImg" type="Sprite2D" parent="."]
position = Vector2(548, 374)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_ustnh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SisyphusStockImg"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_y2o57")
}

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlaytimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Current Mt Olympus WR: 1:47:46"
text = "Playtime:"

[node name="SisyphusLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 48
text = "SISYPHUS"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="MountainNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Mount Olympus"
horizontal_alignment = 2

[node name="MountainHeightLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "m"
horizontal_alignment = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_8ubw0")
theme_override_styles/fill = SubResource("StyleBoxFlat_y2o57")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SufferingLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Inevitable. Also, expendible"
mouse_filter = 1
text = "Suffering: "

[node name="StrengthLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Determines speed"
mouse_filter = 1
text = "Strength: "

[node name="BoulderWeightLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Increases suffering/second"
mouse_filter = 1
text = "Weight:"

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "strength / boulder weight"
mouse_filter = 1
text = "Speed:"

[node name="DayLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = SubResource("CompressedTexture2D_1ged7")
expand_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="MeaningLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Resets every day. Converted into happiness when you ascend"
mouse_filter = 1
text = "Meaning"
horizontal_alignment = 2

[node name="HappinessLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Fleeting, but also everlasting"
mouse_filter = 1
text = "Happiness"
horizontal_alignment = 2

[node name="SummitLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "+Ascents% Strength/Second"
mouse_filter = 1
text = "Ascents"
horizontal_alignment = 2

[node name="PurchaseAmountDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 28)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
size_flags_stretch_ratio = 11.46
focus_mode = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="StrengthButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "+0.1 Strength (1 suffering)"
alignment = 0

[node name="AutobuyStrengthCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
text = "Autobuy Strength"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="WeightButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "+0.1 weight (1 Strength)"
alignment = 0

[node name="AutobuyWeightCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
text = "Autobuy Weight"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="AutoreflectCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
focus_mode = 0
text = "AutoReflect"

[node name="AutoAscendCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
focus_mode = 0
text = "AutoAscend"

[node name="MusicButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
focus_mode = 0
toggle_mode = true
text = "music"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/HBoxContainer/MusicButton"]
unique_name_in_owner = true
stream = ExtResource("8_8ubw0")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[connection signal="item_selected" from="MarginContainer/VBoxContainer/PurchaseAmountDropdown" to="." method="_on_purchase_amount_dropdown_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/StrengthButton" to="." method="_on_strength_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/AutobuyStrengthCheckBox" to="." method="_on_autobuy_strength_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/WeightButton" to="." method="_on_weight_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/AutobuyWeightCheckBox" to="." method="_on_autobuy_weight_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/AutoreflectCheckBox" to="." method="_on_autoreflect_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/AutoAscendCheckBox" to="." method="_on_auto_ascend_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MusicButton" to="." method="_on_music_button_toggled"]
